Make sure all lines for all columns of the tree menu are properly aligned.

--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,14 @@ div.invisible {
     display: none;
 }
 
+.visibility-hidden {
+    visibility: hidden;
+}
+
+.nowrap {
+    white-space: nowrap;
+}
+
 .centered {
     margin-left: auto;
     margin-right: auto;
